--- a/fiddler_crabs.qmd
+++ b/fiddler_crabs.qmd
@@ -9,3 +9,9 @@ library(lterdatasampler)
 
 pie_crab 
 ```
+
+```{r}
+library(tidyverse)
+
+ggplot(data=pie_crab, aes(x=size, y=latitude)) + geom_point(alpha=0.5)
+```
